CORE-954 - Fixed multiselect combobox placeholder being truncated

--- a/runtime/css/select.less
+++ b/runtime/css/select.less
@@ -30,6 +30,10 @@ permissions and limitations under the License.
 
       }
 
+      .chosen-choices .default {
+          width: 100% !important;
+      }
+
     }
 
 }
